# Custom-Text-Editor

./: .gitignore  CMakeLists.txt  README.md
include/: buffer.hpp  diff.hpp  diffviewer.hpp  editor.hpp  filetype.hpp  terminal.hpp
src/: buffer.cpp  diff.cpp  diffviewer.cpp  editor.cpp  filetype.cpp  main.cpp  terminal.cpp
tests/: test_main.cpp
